complete function login and register

--- a/frontend/restaurant-management-app/src/app/component/register/register.component.css
+++ b/frontend/restaurant-management-app/src/app/component/register/register.component.css
@@ -243,6 +243,14 @@ button a {
     color: #FFFFFF;
 }
 
+.error-message {
+	color: red;
+}
+
+.text-danger {
+	color: red;
+}
+
 footer p {
     margin: 10px 0;
 }
