backend(add model contact),  design layout dishes and other

--- a/frontend/restaurant-management-app/src/app/app.component.html
+++ b/frontend/restaurant-management-app/src/app/app.component.html
@@ -1,13 +1,13 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced.  * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <app-nav-bar></app-nav-bar>
 <router-outlet></router-outlet>
 
 
 <app-footer-bar></app-footer-bar>
+
+<!-- app.component.html -->
+<!-- <div id="main-container">
+    <app-nav-bar></app-nav-bar>
+    <router-outlet></router-outlet>
+    <app-footer-bar></app-footer-bar>
+</div>
+   -->
