--- a/frontend/restaurant-management-app/src/app/component/footer-bar/footer-bar.component.html
+++ b/frontend/restaurant-management-app/src/app/component/footer-bar/footer-bar.component.html
@@ -4,7 +4,9 @@
    <div class="container">
       <div class="row">
          <div class="col-lg-6 col-sm-12">
-            <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Free Html Templates</a></p>
+            <p class="copyright_text">170 An Dương Vương, Phường Nguyễn Văn Cừ, thành phố Quy Nhơn.</p>
+            <p class="copyright_text">DungMama' Kitchen</p>
+
          </div>
          <div class="col-lg-6 col-sm-12">
             <div class="footer_social_icon">
@@ -18,5 +20,5 @@
          </div>
       </div>
    </div>
-</div>
+</div> 
 <!-- copyright section end -->
