--- a/frontend/restaurant-management-app/src/app/component/home/home.component.html
+++ b/frontend/restaurant-management-app/src/app/component/home/home.component.html
@@ -15,7 +15,7 @@
                      </div>
                      <div class="col-md-6">
                         <div class="banner_taital_main">
-                           <h1 class="banner_taital">Nhà Hàng DTO</h1>
+                           <h1 class="banner_taital">Dung Mama' Kitchen</h1>
                            <h5 class="tasty_text">Hương vị hoa anh đào</h5>
                            <p class="banner_text">Trải nghiệm ẩm thực tuyệt vời với các món ăn đa dạng từ các đầu bếp tài ba.
                               Thưởng thức món sushi ngon nhất thành phố!
@@ -35,13 +35,15 @@
                      </div>
                      <div class="col-md-6">
                         <div class="banner_taital_main">
-                           <h1 class="banner_taital">Nhà Hàng DTO</h1>
+                           <h1 class="banner_taital">Dung Mama' Kitchen</h1>
                            <h5 class="tasty_text">Hương vị hoa anh đào</h5>
                            <p class="banner_text">Trải nghiệm ẩm thực tuyệt vời với các món ăn đa dạng từ các đầu bếp tài ba.
                               Thưởng thức món sushi ngon nhất thành phố!
                            </p>
+                           <p class="banner_text">170 An Dương Vương, phường Nguyễn Văn Cừ, thành phố Quy Nhơn.
+                           </p>
                            <div class="btn_main">
-                              <div class="about_bt"><a href="#">About Us</a></div>
+                              <div class="about_bt"><a href="about-us">About Us</a></div>
                               <div class="callnow_bt active"><a href="#">Call Now</a></div>
                            </div>
                         </div>
@@ -51,11 +53,11 @@
                <div class="carousel-item">
                   <div class="row">
                      <div class="col-md-6">
-                        <div class="banner_img"><img src="asets/images/banner-img.png"></div>
+                        <div class="banner_img"><img src="assets/images/banner-img.png"></div>
                      </div>
                      <div class="col-md-6">
                         <div class="banner_taital_main">
-                           <h1 class="banner_taital">Nhà Hàng DTO</h1>
+                           <h1 class="banner_taital">Dung Mama' Kitchen</h1>
                            <h5 class="tasty_text">Hương vị hoa anh đào</h5>
                            <p class="banner_text">Trải nghiệm ẩm thực tuyệt vời với các món ăn đa dạng từ các đầu bếp tài ba.
                               Thưởng thức món sushi ngon nhất thành phố!
