--- a/frontend/restaurant-management-app/src/app/component/nav-bar/nav-bar.component.html
+++ b/frontend/restaurant-management-app/src/app/component/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
 <div class="header_section">
    <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-         <a class="navbar-brand"href="index.html"><img src="assets/images/logo.png"></a>
+         <a class="navbar-brand"href="index.html"><img style="width: 50px;" src="assets/images/logo.png"></a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
          </button>
@@ -15,10 +15,7 @@
                   <a class="nav-link" href="about-us" routerLink="about-us">Giới thiệu</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="catogories" routerLink="catogories">Danh mục</a>
-               </li>
-               <li class="nav-item">
-                  <a class="nav-link" href="dishes" routerLink="dishes" >Món ăn</a>
+                  <a class="nav-link" href="dishes" routerLink="dishes" >Thực đơn</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="contact" routerLink="contact">Liên hệ</a>
