--- a/frontend/restaurant-management-app/src/app/component/login/login.component.html
+++ b/frontend/restaurant-management-app/src/app/component/login/login.component.html
@@ -34,7 +34,7 @@
     <div class="overlay-container">
       <div class="overlay">
         <div class="overlay-panel overlay-right">
-          <h1>Xin chào, mừng bạn đến với Nhà hàng DTO!</h1>
+          <h1>Xin chào, mừng bạn đến với Dung Mama' Kitchen!</h1>
           <p>Nếu bạn chưa có tài khoản, hãy nhấn nút "Đăng ký" ở dưới.</p>
           <button class="ghost">
             <a routerLink="/register">Đăng ký</a>
