--- a/frontend/restaurant-management-app/src/app/component/register/register.component.css
+++ b/frontend/restaurant-management-app/src/app/component/register/register.component.css
@@ -99,7 +99,8 @@ input {
 	max-width: 100%;
 	min-height: 600px;
     margin: auto;
-    margin-top: 5%;
+    margin-top: 7%;
+	margin-bottom: 2%;
 }
 
 .form-container {
