--- a/frontend/restaurant-management-app/src/app/component/dish-list/dish-list.component.html
+++ b/frontend/restaurant-management-app/src/app/component/dish-list/dish-list.component.html
@@ -1,70 +1,38 @@
 <!-- coffee section start -->
 <div class="coffee_section layout_padding">
-    <div class="container">
-       <div class="row">
-          <h1 class="coffee_taital">THỰC ĐƠN CỦA CHÚNG TÔI</h1>
-          <div class="bulit_icon"><img src="assets/images/bulit-icon.png"></div>
-       </div>
-    </div>
-    <div class="coffee_section_2">
-       <div id="main_slider" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
-             <div class="carousel-item active">
-                <div class="container-fluid">
-                   <div class="row">
-                    <div class="col-md-12">
-                        <h1 class="about_taital">SUSHI</h1>
-                    </div>
-                    <div *ngFor="let dish of dishes | categoryFilter: 1; let i = index" class="col-lg-3 col-md-6" [class.active]="i < 4">
-                        <div class="coffee_img"><img style="width: 300px; height: 200px;" src="{{dish.ImageURL}}"></div>
-                         <h3 class="types_text">{{ dish.Name }}</h3>
-                         <p class="looking_text">{{ dish.Price }} VNĐ</p>
-                         <div class="read_bt"><a href="dish-detail" routerLink="dish-detail">Xem thêm</a></div>
-                         <br>
-                      </div>
-                   </div>
-                </div>
-             </div>
-             <div class="carousel-item" *ngIf="dishes | categoryFilter: 3 as category3Dishes">
-                <div class="container-fluid">
-                   <div class="row">
-                    <div class="col-md-12">
-                        <h1 class="about_taital">ĐỒ ĂN KÈM</h1>
-                    </div>
-                    <div *ngFor="let dish of dishes | categoryFilter: 3; let i = index" class="col-lg-3 col-md-6" [class.active]="i < 4">
-                        <div class="coffee_img"><img style="width: 300px; height: 200px;" src="{{dish.ImageURL}}"></div>
-                        <h3 class="types_text">{{ dish.Name }}</h3>
-                        <p class="looking_text">{{ dish.Price }} VNĐ</p>
-                        <div class="read_bt"><a href="dish-detail" routerLink="dish-detail">Xem thêm</a></div>
-                        <br>
+   <div class="container">
+      <div class="row">
+         <h1 class="coffee_taital">THỰC ĐƠN CỦA CHÚNG TÔI</h1>
+         <div class="bulit_icon"><img src="assets/images/bulit-icon.png"></div>
+      </div>
+   </div>
+   <div class="coffee_section_2">
+      <div id="main_slider" class="carousel slide" data-ride="carousel">
+         <div class="carousel-inner">
+            <div *ngFor="let category of categories; let i = index" class="carousel-item" [class.active]="i == 0">
+               <div class="container-fluid">
+                  <div class="row">
+                     <div class="col-md-12">
+                         <h1 class="about_taital">{{ category.Name }}</h1>
                      </div>
-                   </div>
-                </div>
-             </div>
-             <div class="carousel-item" *ngIf="dishes | categoryFilter: 2 as category2Dishes">
-                <div class="container-fluid">
-                   <div class="row">
-                    <div class="col-md-12">
-                        <h1 class="about_taital">NƯỚC UỐNG GIẢI KHÁT</h1>
-                    </div>
-                    <div *ngFor="let dish of dishes | categoryFilter: 2; let i = index" class="col-lg-3 col-md-6" [class.active]="i < 4">
-                        <div class="coffee_img"><img style="width: 300px; height: 200px;" src="{{dish.ImageURL}}"></div>
+                     <div *ngFor="let dish of dishes | categoryFilter: category.CategoryID; let j = index" class="col-lg-3 col-md-6" [class.active]="j < 4">
+                         <div class="coffee_img"><img style="width: 300px; height: 200px;" src="{{dish.ImageURL}}"></div>
                          <h3 class="types_text">{{ dish.Name }}</h3>
                          <p class="looking_text">{{ dish.Price }} VNĐ</p>
-                         <div class="read_bt"><a href="dish-detail" routerLink="dish-detail">Xem thêm</a></div>
+                         <div class="read_bt"><a href="dish-detail" [routerLink]="['/dish-detail', dish.DishID]">Xem thêm</a></div>
                          <br>
-                      </div>
-                   </div>
-                </div>
-             </div>
-          </div>
-          <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
-          <i class="fa fa-arrow-left"></i>
-          </a>
-          <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
-          <i class="fa fa-arrow-right"></i>
-          </a>
-       </div>
-    </div>
- </div>
- <!-- coffee section end -->
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
+         <i class="fa fa-arrow-left"></i>
+         </a>
+         <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
+         <i class="fa fa-arrow-right"></i>
+         </a>
+      </div>
+   </div>
+</div>
+<!-- coffee section end -->
