--- a/frontend/restaurant-management-app/src/app/component/home/home.component.html
+++ b/frontend/restaurant-management-app/src/app/component/home/home.component.html
@@ -21,8 +21,8 @@
                               Thưởng thức món sushi ngon nhất thành phố!
                            </p>
                            <div class="btn_main">
-                              <div class="about_bt"><a href="#">About Us</a></div>
-                              <div class="callnow_bt active"><a href="#">Call Now</a></div>
+                              <div class="about_bt"><a href="/about-us" routerLink="/about-us">Giới thiệu</a></div>
+                              <div class="callnow_bt active"><a href="/dishes" routerLink="/dishes">Xem ngay</a></div>
                            </div>
                         </div>
                      </div>
@@ -43,8 +43,8 @@
                            <p class="banner_text">170 An Dương Vương, phường Nguyễn Văn Cừ, thành phố Quy Nhơn.
                            </p>
                            <div class="btn_main">
-                              <div class="about_bt"><a href="about-us">About Us</a></div>
-                              <div class="callnow_bt active"><a href="#">Call Now</a></div>
+                              <div class="about_bt"><a href="/about-us" routerLink="/about-us">Giới thiệu</a></div>
+                              <div class="callnow_bt active"><a href="/dishes" routerLink="/dishes">Xem ngay</a></div>
                            </div>
                         </div>
                      </div>
@@ -63,8 +63,8 @@
                               Thưởng thức món sushi ngon nhất thành phố!
                            </p>
                            <div class="btn_main">
-                              <div class="about_bt"><a href="#">About Us</a></div>
-                              <div class="callnow_bt active"><a href="#">Call Now</a></div>
+                              <div class="about_bt"><a href="/about-us" routerLink="/about-us">Giới thiệu</a></div>
+                              <div class="callnow_bt active"><a href="/dishes" routerLink="/dishes">Xem ngay</a></div>
                            </div>
                         </div>
                      </div>
@@ -87,7 +87,7 @@
 <div class="coffee_section layout_padding">
    <div class="container">
       <div class="row">
-         <h1 class="coffee_taital">OUR Coffee OFFER</h1>
+         <h1 class="coffee_taital">THỰC ĐƠN CỦA CHÚNG TÔI</h1>
          <div class="bulit_icon"><img src="assets/images/bulit-icon.png"></div>
       </div>
    </div>
@@ -101,85 +101,21 @@
                         <div class="coffee_img"><img src="assets/images/img-1.png"></div>
                         <h3 class="types_text">TYPES OF COFFEE</h3>
                         <p class="looking_text">looking at its layout. The point of</p>
-                        <div class="read_bt"><a href="#">Read More</a></div>
                      </div>
                      <div class="col-lg-3 col-md-6">
                         <div class="coffee_img"><img src="assets/images/img-2.png"></div>
                         <h3 class="types_text">BEAN VARIETIES</h3>
                         <p class="looking_text">looking at its layout. The point of</p>
-                        <div class="read_bt"><a href="#">Read More</a></div>
                      </div>
                      <div class="col-lg-3 col-md-6">
                         <div class="coffee_img"><img src="assets/images/img-3.png"></div>
                         <h3 class="types_text">COFFEE & PASTRY</h3>
                         <p class="looking_text">looking at its layout. The point of</p>
-                        <div class="read_bt"><a href="#">Read More</a></div>
                      </div>
                      <div class="col-lg-3 col-md-6">
                         <div class="coffee_img"><img src="assets/images/img-4.png"></div>
                         <h3 class="types_text">COFFEE TO GO</h3>
                         <p class="looking_text">looking at its layout. The point of</p>
-                        <div class="read_bt"><a href="#">Read More</a></div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <div class="carousel-item">
-               <div class="container-fluid">
-                  <div class="row">
-                     <div class="col-lg-3 col-md-6">
-                        <div class="coffee_img"><img src="assets/images/img-1.png"></div>
-                        <h3 class="types_text">TYPES OF COFFEE</h3>
-                        <p class="looking_text">looking at its layout. The point of</p>
-                        <div class="read_bt"><a href="#">Read More</a></div>
-                     </div>
-                     <div class="col-lg-3 col-md-6">
-                        <div class="coffee_img"><img src="assets/images/img-2.png"></div>
-                        <h3 class="types_text">BEAN VARIETIES</h3>
-                        <p class="looking_text">looking at its layout. The point of</p>
-                        <div class="read_bt"><a href="#">Read More</a></div>
-                     </div>
-                     <div class="col-lg-3 col-md-6">
-                        <div class="coffee_img"><img src="assets/images/img-3.png"></div>
-                        <h3 class="types_text">COFFEE & PASTRY</h3>
-                        <p class="looking_text">looking at its layout. The point of</p>
-                        <div class="read_bt"><a href="#">Read More</a></div>
-                     </div>
-                     <div class="col-lg-3 col-md-6">
-                        <div class="coffee_img"><img src="assets/images/img-4.png"></div>
-                        <h3 class="types_text">COFFEE TO GO</h3>
-                        <p class="looking_text">looking at its layout. The point of</p>
-                        <div class="read_bt"><a href="#">Read More</a></div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <div class="carousel-item">
-               <div class="container-fluid">
-                  <div class="row">
-                     <div class="col-lg-3 col-md-6">
-                        <div class="coffee_img"><img src="assets/images/img-1.png"></div>
-                        <h3 class="types_text">TYPES OF COFFEE</h3>
-                        <p class="looking_text">looking at its layout. The point of</p>
-                        <div class="read_bt"><a href="#">Read More</a></div>
-                     </div>
-                     <div class="col-lg-3 col-md-6">
-                        <div class="coffee_img"><img src="assets/images/img-2.png"></div>
-                        <h3 class="types_text">BEAN VARIETIES</h3>
-                        <p class="looking_text">looking at its layout. The point of</p>
-                        <div class="read_bt"><a href="#">Read More</a></div>
-                     </div>
-                     <div class="col-lg-3 col-md-6">
-                        <div class="coffee_img"><img src="assets/images/img-3.png"></div>
-                        <h3 class="types_text">COFFEE & PASTRY</h3>
-                        <p class="looking_text">looking at its layout. The point of</p>
-                        <div class="read_bt"><a href="#">Read More</a></div>
-                     </div>
-                     <div class="col-lg-3 col-md-6">
-                        <div class="coffee_img"><img src="assets/images/img-4.png"></div>
-                        <h3 class="types_text">COFFEE TO GO</h3>
-                        <p class="looking_text">looking at its layout. The point of</p>
-                        <div class="read_bt"><a href="#">Read More</a></div>
                      </div>
                   </div>
                </div>
@@ -192,6 +128,7 @@
          <i class="fa fa-arrow-right"></i>
          </a>
       </div>
+      <div style="float: right; margin-right: 20px;" class="read_bt"><a href="dishes" routerLink="dishes">Xem thêm</a></div>
    </div>
 </div>
 <!-- coffee section end -->
@@ -210,7 +147,8 @@
             <h1 class="about_taital_1">Sushi & Nước Uống Kèm</h1>
             <p class=" about_text">Chúng tôi tự hào là địa chỉ lý tưởng cho những tín đồ sushi và người yêu thích nước uống đặc biệt.
                                     Nhà hàng chúng tôi tự hào mang lại những trải nghiệm ẩm thực độc đáo, từ những món sushi truyền thống cho đến các sáng tạo mới lạ, đảm bảo sẽ làm hài lòng mọi thực khách.
-                                    Ngoài ra, chúng tôi còn cung cấp một loạt các loại nước uống độc đáo và phong phú, từ trà xanh truyền thống cho đến cocktail tinh tế, để tạo điều kiện lý tưởng cho bữa ăn của bạn.</p>
+                                    Ngoài ra, chúng tôi còn cung cấp một loạt các loại nước uống độc đáo và phong phú, từ trà xanh truyền thống cho đến cocktail tinh tế, để tạo điều kiện lý tưởng cho bữa ăn của bạn. 
+                                    Hãy xem các đánh giá...</p>
             <div class="readmore_btn"><a href="about-us" routerLink="about-us">Đọc thêm</a></div>
          </div>
       </div>
@@ -253,34 +191,5 @@
 </div>
 <!-- blog section end -->
 <!-- contact section start -->
-<div class="contact_section layout_padding">
-   <div class="container">
-      <div class="row">
-         <div class="col-sm-12">
-            <h1 class="contact_taital">Get In Touch</h1>
-            <div class="bulit_icon"><img src="assets/images/bulit-icon.png"></div>
-         </div>
-      </div>
-   </div>
-   <div class="container-fluid">
-      <div class="contact_section_2">
-         <div class="row">
-            <div class="col-md-12">
-               <div class="mail_section_1">
-                  <input type="text" class="mail_text" placeholder="Your Name" name="Your Name">
-                  <input type="text" class="mail_text" placeholder="Your Email" name="Your Email">
-                  <input type="text" class="mail_text" placeholder="Your Phone" name="Your Phone">
-                  <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
-                  <div class="send_bt"><a href="#">SEND</a></div>
-               </div>
-            </div>
-            <div class="map_main">
-               <div class="map-responsive">
-                  <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&amp;q=Eiffel+Tower+Paris+France" width="250" height="500" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
-</div>
+<app-contact></app-contact>
 <!-- contact section end -->
