--- a/frontend/restaurant-management-app/src/app/app.component.html
+++ b/frontend/restaurant-management-app/src/app/app.component.html
@@ -1,13 +1,13 @@
-<app-nav-bar></app-nav-bar>
+<!-- <app-nav-bar></app-nav-bar>
 <router-outlet></router-outlet>
 
 
-<app-footer-bar></app-footer-bar>
+<app-footer-bar></app-footer-bar> -->
 
 <!-- app.component.html -->
-<!-- <div id="main-container">
+<div id="main-container">
     <app-nav-bar></app-nav-bar>
     <router-outlet></router-outlet>
     <app-footer-bar></app-footer-bar>
 </div>
-   -->
+  
