--- a/frontend/restaurant-management-app/src/app/component/home/home.component.html
+++ b/frontend/restaurant-management-app/src/app/component/home/home.component.html
@@ -94,41 +94,27 @@
    <div class="coffee_section_2">
       <div id="main_slider" class="carousel slide" data-ride="carousel">
          <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div *ngFor="let group of dishGroups; let groupIndex = index" class="carousel-item" [class.active]="groupIndex === 0">
                <div class="container-fluid">
                   <div class="row">
-                     <div class="col-lg-3 col-md-6">
-                        <div class="coffee_img"><img src="assets/images/img-1.png"></div>
-                        <h3 class="types_text">TYPES OF COFFEE</h3>
-                        <p class="looking_text">looking at its layout. The point of</p>
-                     </div>
-                     <div class="col-lg-3 col-md-6">
-                        <div class="coffee_img"><img src="assets/images/img-2.png"></div>
-                        <h3 class="types_text">BEAN VARIETIES</h3>
-                        <p class="looking_text">looking at its layout. The point of</p>
-                     </div>
-                     <div class="col-lg-3 col-md-6">
-                        <div class="coffee_img"><img src="assets/images/img-3.png"></div>
-                        <h3 class="types_text">COFFEE & PASTRY</h3>
-                        <p class="looking_text">looking at its layout. The point of</p>
-                     </div>
-                     <div class="col-lg-3 col-md-6">
-                        <div class="coffee_img"><img src="assets/images/img-4.png"></div>
-                        <h3 class="types_text">COFFEE TO GO</h3>
-                        <p class="looking_text">looking at its layout. The point of</p>
+                     <div *ngFor="let dish of group" class="col-lg-3 col-md-6">
+                        <div class="coffee_img"><img [src]="dish.ImageURL" style="width: 300px; height: 200px;"></div>
+                        <h3 class="types_text">{{ dish.Name }}</h3>
+                        <p class="looking_text">{{ dish.Price }} VNĐ</p>
+                        <br>
                      </div>
                   </div>
                </div>
             </div>
          </div>
          <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
-         <i class="fa fa-arrow-left"></i>
+            <i class="fa fa-arrow-left"></i>
          </a>
          <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
-         <i class="fa fa-arrow-right"></i>
+            <i class="fa fa-arrow-right"></i>
          </a>
       </div>
-      <div style="float: right; margin-right: 20px;" class="read_bt"><a href="dishes" routerLink="dishes">Xem thêm</a></div>
+      <div style="float: right; margin-right: 20px;" class="read_bt"><a href="/dishes" routerLink="/dishes">Xem thêm</a></div>
    </div>
 </div>
 <!-- coffee section end -->
@@ -157,7 +143,7 @@
 <!-- about section end -->
 
 <!-- blog section start -->
-<div class="blog_section layout_padding">
+<!-- <div class="blog_section layout_padding">
    <div class="container">
       <div class="row">
          <div class="col-md-12">
@@ -188,7 +174,7 @@
          </div>
       </div>
    </div>
-</div>
+</div> -->
 <!-- blog section end -->
 <!-- contact section start -->
 <app-contact></app-contact>
