--- a/frontend/restaurant-management-app/src/app/component/dish-list/dish-list.component.html
+++ b/frontend/restaurant-management-app/src/app/component/dish-list/dish-list.component.html
@@ -19,7 +19,7 @@
                          <div class="coffee_img"><img style="width: 300px; height: 200px;" src="{{dish.ImageURL}}"></div>
                          <h3 class="types_text">{{ dish.Name }}</h3>
                          <p class="looking_text">{{ dish.Price }} VNĐ</p>
-                         <div class="read_bt"><a href="dish-detail" [routerLink]="['/dish-detail', dish.DishID]">Xem thêm</a></div>
+                         <div style="width: 300px;" class="read_bt"><a style="margin-right: 20px;" href="#" [routerLink]="">Đặt ngay</a><a href="dish-detail" [routerLink]="['/dish-detail', dish.DishID]">Xem thêm</a></div>
                          <br>
                      </div>
                   </div>
