--- a/frontend/restaurant-management-app/src/app/component/nav-bar/nav-bar.component.html
+++ b/frontend/restaurant-management-app/src/app/component/nav-bar/nav-bar.component.html
@@ -9,13 +9,13 @@
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                <li class="nav-item active">
-                  <a class="nav-link" href="home" routerLink="home" >Trang chủ</a>
+                  <a class="nav-link" href="home" routerLink="home">Trang chủ</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="about-us" routerLink="about-us">Giới thiệu</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="dishes" routerLink="dishes" >Thực đơn</a>
+                  <a class="nav-link" href="dishes" routerLink="dishes">Thực đơn</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="contact" routerLink="contact">Liên hệ</a>
@@ -24,8 +24,12 @@
             <form class="form-inline my-2 my-lg-0">
                <div class="login_bt">
                   <ul>
-                     <li><a href="login" routerLink="login"><span class="user_icon"><i class="fa fa-user" aria-hidden="true"></i></span>Đăng nhập</a></li>
-                     <!-- <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li> -->
+                     <li *ngIf="!isLoggedIn">
+                        <a href="login" routerLink="login"><span class="user_icon"><i class="fa fa-user" aria-hidden="true"></i></span>Đăng nhập</a>
+                     </li>
+                     <li *ngIf="isLoggedIn">
+                        <a (click)="logout()"><span class="user_icon"><i class="fa fa-user" aria-hidden="true"></i></span>Đăng xuất</a>
+                     </li>
                   </ul>
                </div>
             </form>
