add function search dish

--- a/frontend/restaurant-management-app/src/app/app.component.html
+++ b/frontend/restaurant-management-app/src/app/app.component.html
@@ -7,7 +7,9 @@
 <!-- app.component.html -->
 <div id="main-container">
     <app-nav-bar></app-nav-bar>
-    <router-outlet></router-outlet>
+    <div id="content">
+        <router-outlet></router-outlet>
+    </div>
     <app-footer-bar></app-footer-bar>
 </div>
   
