--- a/frontend/restaurant-management-app/src/app/component/category-list/category-list.component.html
+++ b/frontend/restaurant-management-app/src/app/component/category-list/category-list.component.html
@@ -1,1 +1,12 @@
-<p>category-list works!</p>
+<div class="container">
+    <div class="row">
+      <h1 class="category-title">Danh sách danh mục</h1>
+      <div *ngFor="let category of categories" class="col-md-4">
+        <div class="category-card">
+          <h3 class="category-name">{{ category.Name }}</h3>
+          <p class="category-description">{{ category.Description }}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  
