--- a/frontend/restaurant-management-app/src/app/component/footer-bar/footer-bar.component.html
+++ b/frontend/restaurant-management-app/src/app/component/footer-bar/footer-bar.component.html
@@ -4,7 +4,8 @@
    <div class="container">
       <div class="row">
          <div class="col-lg-6 col-sm-12">
-            <p class="copyright_text">DungMama' Kitchen</p>
+            <p class="copyright_text">2024 - Dung Mama'Kitchen</p>
+            <p class="copyright_text">170 An Dương Vương, phường Nguyễn Văn Cừ, tp Quy Nhơn</p>         
          </div>
          <div class="col-lg-6 col-sm-12">
             <div class="footer_social_icon">
@@ -18,5 +19,5 @@
          </div>
       </div>
    </div>
-</div> 
+</div>
 <!-- copyright section end -->
