--- a/frontend/restaurant-management-app/src/app/component/home/home.component.html
+++ b/frontend/restaurant-management-app/src/app/component/home/home.component.html
@@ -177,5 +177,7 @@
 </div> -->
 <!-- blog section end -->
 <!-- contact section start -->
-<app-contact></app-contact>
+<div>
+   <app-contact></app-contact>
+</div>
 <!-- contact section end -->
