--- a/frontend/restaurant-management-app/src/app/component/nav-bar/nav-bar.component.html
+++ b/frontend/restaurant-management-app/src/app/component/nav-bar/nav-bar.component.html
@@ -9,8 +9,16 @@
        <div class="collapse navbar-collapse" id="navbarSupportedContent">
          <ul class="navbar-nav ml-auto">
            <li class="nav-item active">
-             <a class="nav-link" href="home" routerLink="home">Trang chủ</a>
+            <div class="search-box">
+              <input type="text" class="search-input" placeholder="Tìm kiếm..." [(ngModel)]="searchKeyword">
+              <button (click)="onSearch()" class="search-button">
+                  <i class="fa fa-search search-icon" aria-hidden="true"></i>
+              </button>
+          </div>
            </li>
+           <li class="nav-item">
+            <a class="nav-link" href="home" routerLink="home">Trang chủ</a>
+          </li>
            <li class="nav-item">
              <a class="nav-link" href="about-us" routerLink="about-us">Giới thiệu</a>
            </li>
@@ -38,4 +46,12 @@
    </div>
  </div>
  <!-- header section end -->
- 
+ <script>
+   $(document).ready(function() {
+    $('.search-input').on('focus', function() {
+        $(this).css('width', '300px');
+    }).on('blur', function() {
+        $(this).css('width', '150px');
+    });
+  });
+ </script>
