Added filtering by category to search function

--- a/frontend/restaurant-management-app/src/app/component/contact/contact.component.html
+++ b/frontend/restaurant-management-app/src/app/component/contact/contact.component.html
@@ -1,5 +1,5 @@
 <!-- contact section start -->
-<div class="contact_section layout_padding">
+<div style="margin-bottom: 50px!important;" class="contact_section layout_padding">
    <div class="container">
       <div class="row">
          <div class="col-sm-12">
