--- a/frontend/restaurant-management-app/src/app/component/home/home.component.html
+++ b/frontend/restaurant-management-app/src/app/component/home/home.component.html
@@ -130,12 +130,12 @@
       <div class="about_section_2 layout_padding">
          <div class="image_iman"><img src="assets/images/about-img.png" class="about_img"></div>
          <div class="about_taital_box">
-            <h1 class="about_taital_1">Sushi & Nước Uống Kèm</h1>
+            <h1 class="about_taital_1">Dung Mama'Kitchen</h1>
             <p class=" about_text">Chúng tôi tự hào là địa chỉ lý tưởng cho những tín đồ sushi và người yêu thích nước uống đặc biệt.
                                     Nhà hàng chúng tôi tự hào mang lại những trải nghiệm ẩm thực độc đáo, từ những món sushi truyền thống cho đến các sáng tạo mới lạ, đảm bảo sẽ làm hài lòng mọi thực khách.
                                     Ngoài ra, chúng tôi còn cung cấp một loạt các loại nước uống độc đáo và phong phú, từ trà xanh truyền thống cho đến cocktail tinh tế, để tạo điều kiện lý tưởng cho bữa ăn của bạn. 
                                     Hãy xem các đánh giá...</p>
-            <div class="readmore_btn"><a href="about-us" routerLink="about-us">Đọc thêm</a></div>
+            <div class="readmore_btn"><a href="/about-us" routerLink="/about-us">Đọc thêm</a></div>
          </div>
       </div>
    </div>
@@ -177,7 +177,5 @@
 </div> -->
 <!-- blog section end -->
 <!-- contact section start -->
-<div>
    <app-contact></app-contact>
-</div>
 <!-- contact section end -->
