--- a/frontend/restaurant-management-app/src/app/component/search-dish/search-dish.component.html
+++ b/frontend/restaurant-management-app/src/app/component/search-dish/search-dish.component.html
@@ -1,36 +1,40 @@
 <!-- coffee section start -->
 <div class="coffee_section layout_padding">
-    <div class="container">
-      <div class="row">
-        <h1 class="coffee_taital">Kết quả tìm kiếm</h1>
-        <div class="bulit_icon"><img src="assets/images/bulit-icon.png"></div>
+  <div class="container">
+    <div class="row">
+      <h1 class="coffee_taital">Kết quả tìm kiếm</h1>
+      <div class="bulit_icon"><img src="assets/images/bulit-icon.png"></div>
+      <div class="category-menu">
+        <a href="#" class="category-item" *ngFor="let category of categories" (click)="filterByCategory($event, category.CategoryID)">
+          {{ category.Name }} ({{ getCategoryCount(category.CategoryID) }})
+        </a>
       </div>
-    </div>
-    <div class="coffee_section_2">
-      <div class="container-fluid">
-        <div class="row">
-          <ng-container *ngIf="dishes.length > 0; else noResults">
-            <div *ngFor="let dish of dishes" class="col-lg-3 col-md-6">
-              <div class="coffee_img">
-                <img style="width: 300px; height: 200px;" src="{{dish.ImageURL}}">
-              </div>
-              <h3 class="types_text">{{ dish.Name }}</h3>
-              <p class="looking_text">{{ dish.Price }} VNĐ</p>
-              <div style="width: 300px;" class="read_bt">
-                <a style="margin-right: 20px;" href="#" [routerLink]="">Đặt ngay</a>
-                <a href="dish-detail" [routerLink]="['/dish-detail', dish.DishID]">Xem thêm</a>
-              </div>
-              <br>
+    </div>    
+  </div>
+  <div class="coffee_section_2">
+    <div class="container-fluid">
+      <div class="row">
+        <ng-container *ngIf="dishes.length > 0; else noResults">
+          <div *ngFor="let dish of dishes" class="col-lg-3 col-md-6">
+            <div class="coffee_img">
+              <img style="width: 300px; height: 200px;" src="{{dish.ImageURL}}">
             </div>
-          </ng-container>
-          <ng-template #noResults>
-            <div class="col-md-12">
-              <h3 class="types_text">Không tìm thấy món ăn nào theo từ khóa "{{ searchKeyword }}"</h3>
+            <h3 class="types_text">{{ dish.Name }}</h3>
+            <p class="looking_text">{{ dish.Price }} VNĐ</p>
+            <div style="width: 300px;" class="read_bt">
+              <a style="margin-right: 20px;" href="#" [routerLink]="">Đặt ngay</a>
+              <a href="dish-detail" [routerLink]="['/dish-detail', dish.DishID]">Xem thêm</a>
             </div>
-          </ng-template>
-        </div>
+            <br>
+          </div>
+        </ng-container>
+        <ng-template #noResults>
+          <div class="col-md-12">
+            <h3 class="types_text">Không tìm thấy món ăn nào theo từ khóa "{{ searchKeyword }}"</h3>
+          </div>
+        </ng-template>
       </div>
     </div>
   </div>
-  <!-- coffee section end -->
-  
+</div>
+<!-- coffee section end -->
