backend(Insert data), frontend(Delegate login permissions, fix reigister, .)

--- a/frontend/restaurant-management-app/src/app/component/search-dish/search-dish.component.html
+++ b/frontend/restaurant-management-app/src/app/component/search-dish/search-dish.component.html
@@ -30,7 +30,7 @@
         </ng-container>
         <ng-template #noResults>
           <div class="col-md-12">
-            <h3 class="types_text">Không tìm thấy món ăn nào theo từ khóa "{{ searchKeyword }}"</h3>
+            <h3 class="types_text">Không tìm thấy theo từ khóa "{{ searchKeyword }}"</h3>
           </div>
         </ng-template>
       </div>
