--- a/frontend/restaurant-management-app/src/app/component/nav-bar/nav-bar.component.html
+++ b/frontend/restaurant-management-app/src/app/component/nav-bar/nav-bar.component.html
@@ -1,57 +1,63 @@
 <!-- header section start -->
 <div class="header_section">
-   <div class="container-fluid">
-     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-       <a class="navbar-brand" href="home" routerLink="home"><img style="width: 60px;" src="assets/images/logo.png"></a>
-       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
-       </button>
-       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-         <ul class="navbar-nav ml-auto">
-           <li class="nav-item active">
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="home" routerLink="home"><img style="width: 60px;" src="assets/images/logo.png"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
             <div class="search-box">
               <input type="text" class="search-input" placeholder="Tìm kiếm..." [(ngModel)]="searchKeyword">
               <button (click)="onSearch()" class="search-button">
-                  <i class="fa fa-search search-icon" aria-hidden="true"></i>
+                <i class="fa fa-search search-icon" aria-hidden="true"></i>
               </button>
-          </div>
-           </li>
-           <li class="nav-item">
+            </div>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="home" routerLink="home">Trang chủ</a>
           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="about-us" routerLink="about-us">Giới thiệu</a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="dishes" routerLink="dishes">Thực đơn</a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="contact" routerLink="contact">Liên hệ</a>
-           </li>
-         </ul>
-         <form class="form-inline my-2 my-lg-0">
-           <div class="login_bt">
-             <ul>
-               <li *ngIf="!isLoggedIn">
-                 <a href="login" routerLink="login"><span class="user_icon"><i class="fa fa-user" aria-hidden="true"></i></span>Đăng nhập</a>
-               </li>
-               <li *ngIf="isLoggedIn">
-                 <a (click)="logout()"><span class="user_icon"><i class="fa fa-user" aria-hidden="true"></i></span>Đăng xuất</a>
-               </li>
-             </ul>
-           </div>
-         </form>
-       </div>
-     </nav>
-   </div>
- </div>
- <!-- header section end -->
- <script>
-   $(document).ready(function() {
+          <li class="nav-item">
+            <a class="nav-link" href="dishes" routerLink="dishes">Thực đơn</a>
+          </li>
+          <li *ngIf="authService.getCurrentUserRole() === 'Admin'" class="nav-item">
+            <a class="nav-link" href="categories" routerLink="categories">Danh mục</a>
+          </li>   
+          <li *ngIf="authService.getCurrentUserRole() === 'Admin'" class="nav-item">
+            <a class="nav-link" href="accounts" routerLink="accounts">Tài khoản</a>
+          </li>          
+          <li class="nav-item">
+            <a *ngIf="!isLoggedIn || authService.getCurrentUserRole() === 'Customer'" class="nav-link" href="about-us" routerLink="about-us">Giới thiệu</a>
+          </li>
+          <li class="nav-item">
+            <a  *ngIf="!isLoggedIn || authService.getCurrentUserRole() === 'Customer'" class="nav-link" href="contact" routerLink="contact">Liên hệ</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <div class="login_bt">
+            <ul>
+              <li *ngIf="!isLoggedIn">
+                <a href="login" routerLink="login"><span class="user_icon"><i class="fa fa-user" aria-hidden="true"></i></span>Đăng nhập</a>
+              </li>
+              <li *ngIf="isLoggedIn">
+                <a (click)="logout()"><span class="user_icon"><i class="fa fa-user" aria-hidden="true"></i></span>Đăng xuất</a>
+              </li>
+            </ul>
+          </div>
+        </form>
+      </div>
+    </nav>
+  </div>
+</div>
+<!-- header section end -->
+<script>
+  $(document).ready(function() {
     $('.search-input').on('focus', function() {
-        $(this).css('width', '300px');
+      $(this).css('width', '300px');
     }).on('blur', function() {
-        $(this).css('width', '150px');
+      $(this).css('width', '150px');
     });
   });
- </script>
+</script>
