--- a/frontend/restaurant-management-app/src/app/component/backet/nav-bar/nav-bar.component.html
+++ b/frontend/restaurant-management-app/src/app/component/backet/nav-bar/nav-bar.component.html
@@ -16,23 +16,30 @@
               </button>
             </div>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" *ngIf="role === 'Admin'">
+            <a class="nav-link" href="admin/home" routerLink="admin/home">Admin Home</a>
+          </li>
+          <li class="nav-item" *ngIf="role === 'Admin'">
+            <a class="nav-link" href="catogories" routerLink="categories">Danh mục</a>
+          </li>
+          <li class="nav-item" *ngIf="role === 'Admin'">
+            <a class="nav-link" href="dish-admin" routerLink="dish-admin">Món Ăn</a>
+          </li>
+          <li class="nav-item" *ngIf="role === 'Admin'">
+            <a class="nav-link" href="accounts" routerLink="accounts">Tài khoản</a>
+          </li>
+
+          <li class="nav-item" *ngIf="role !== 'Admin'">
             <a class="nav-link" href="home" routerLink="home">Trang chủ</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" *ngIf="role !== 'Admin'">
             <a class="nav-link" href="dishes" routerLink="dishes">Thực đơn</a>
           </li>
-          <li *ngIf="authService.getCurrentUserRole() === 'Admin'" class="nav-item">
-            <a class="nav-link" href="categories" routerLink="categories">Danh mục</a>
-          </li>   
-          <li *ngIf="authService.getCurrentUserRole() === 'Admin'" class="nav-item">
-            <a class="nav-link" href="accounts" routerLink="accounts">Tài khoản</a>
-          </li>          
-          <li class="nav-item">
-            <a *ngIf="!isLoggedIn || authService.getCurrentUserRole() === 'Customer'" class="nav-link" href="about-us" routerLink="about-us">Giới thiệu</a>
+          <li class="nav-item" *ngIf="role !== 'Admin'">
+            <a class="nav-link" href="about-us" routerLink="about-us">Giới thiệu</a>
           </li>
-          <li class="nav-item">
-            <a  *ngIf="!isLoggedIn || authService.getCurrentUserRole() === 'Customer'" class="nav-link" href="contact" routerLink="contact">Liên hệ</a>
+          <li class="nav-item" *ngIf="role !== 'Admin'">
+            <a class="nav-link" href="contact" routerLink="contact">Liên hệ</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -52,12 +59,3 @@
   </div>
 </div>
 <!-- header section end -->
-<script>
-  $(document).ready(function() {
-    $('.search-input').on('focus', function() {
-      $(this).css('width', '300px');
-    }).on('blur', function() {
-      $(this).css('width', '150px');
-    });
-  });
-</script>
