--- a/frontend/restaurant-management-app/src/app/component/admin/admin-home/category-list/category-list.component.html
+++ b/frontend/restaurant-management-app/src/app/component/admin/admin-home/category-list/category-list.component.html
@@ -16,7 +16,7 @@
         <td>{{ category.Name }}</td>
         <td>{{ category.Description }}</td>
         <td>
-          <button class="btn btn-warning mr-2" onclick="document.getElementById('id01').style.display='block'">Sửa</button>
+          <button class="btn btn-warning mr-2" (click)="openEditModal(category)">Sửa</button>
           <button class="btn btn-danger" (click)="deleteCategory(category)">Xóa</button>
         </td>
       </tr>
@@ -37,14 +37,14 @@
       </div>
       <!-- Modal Body -->
       <div class="modal-body">
-        <form>
+        <form #form="ngForm" (ngSubmit)="addCategory(form)">
           <div class="mb-3">
             <label for="Name" class="form-label">Tên Danh Mục</label>
-            <input type="text" class="form-control" id="Name" name="Name" required>
+            <input type="text" class="form-control" id="Name" name="Name" [(ngModel)]="newCategory.Name" required>
           </div>
           <div class="mb-3">
             <label for="Description" class="form-label">Mô tả</label>
-            <textarea class="form-control" id="Description" name="Description" rows="3" required></textarea>
+            <textarea class="form-control" id="Description" name="Description" [(ngModel)]="newCategory.Description" rows="3" required></textarea>
           </div>
           <button type="submit" class="btn btn-primary">Lưu</button>
         </form>
@@ -66,14 +66,14 @@
       </div>
       <!-- Modal Body -->
       <div class="modal-body">
-        <form>
+        <form #editForm="ngForm" (ngSubmit)="editCategory(editForm)">
           <div class="mb-3">
             <label for="Name" class="form-label">Tên Danh Mục</label>
-            <input type="text" class="form-control" id="Name" name="Name" required>
+            <input type="text" class="form-control" id="Name" name="Name" [(ngModel)]="selectedCategory.Name" required>
           </div>
           <div class="mb-3">
             <label for="Description" class="form-label">Mô tả</label>
-            <textarea class="form-control" id="Description" name="Description" rows="3" required></textarea>
+            <textarea class="form-control" id="Description" name="Description" [(ngModel)]="selectedCategory.Description" rows="3" required></textarea>
           </div>
           <button type="submit" class="btn btn-warning mr-2">Lưu</button>
         </form>
