--- a/frontend/restaurant-management-app/src/app/component/backet/nav-bar/nav-bar.component.html
+++ b/frontend/restaurant-management-app/src/app/component/backet/nav-bar/nav-bar.component.html
@@ -33,6 +33,9 @@
           <li class="nav-item" *ngIf="role !== 'Admin'">
             <a class="nav-link" href="home" routerLink="home">Trang chủ</a>
           </li>
+          <li class="nav-item" *ngIf="role == 'Customer'">
+            <a class="nav-link" href="orders" routerLink="orders">Đặt</a>
+          </li>
           <li class="nav-item" *ngIf="role !== 'Admin'">
             <a class="nav-link" href="dishes" routerLink="dishes">Thực đơn</a>
           </li>
