tabletooking get accountID

--- a/frontend/restaurant-management-app/src/app/component/backet/nav-bar/nav-bar.component.html
+++ b/frontend/restaurant-management-app/src/app/component/backet/nav-bar/nav-bar.component.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="home" routerLink="home">Trang chủ</a>
           </li>
           <li class="nav-item" *ngIf="role == 'Customer'">
-            <a class="nav-link" href="orders" routerLink="orders">Đặt</a>
+            <a class="nav-link" href="mybooking" routerLink="mybooking">Danh sách đặt</a>
           </li>
           <li class="nav-item" *ngIf="role !== 'Admin'">
             <a class="nav-link" href="dishes" routerLink="dishes">Thực đơn</a>
