--- a/frontend/restaurant-management-app/src/app/component/admin/admin-home/account-list/account-list.component.html
+++ b/frontend/restaurant-management-app/src/app/component/admin/admin-home/account-list/account-list.component.html
@@ -20,8 +20,8 @@
         <td>{{ account.Role }}</td>
         <td>{{ account.PhoneNumber }}</td>
         <td>
-          <button class="btn btn-warning mr-2" onclick="document.getElementById('id03').style.display='block'">Sửa</button>
-          <button class="btn btn-danger">Xóa</button>
+          <button class="btn btn-warning mr-2" (click)="openEditModal(account)">Sửa</button>
+          <button class="btn btn-danger" (click)="deleteAccount(account)">Xóa</button>
         </td>
       </tr>
     </tbody>
@@ -41,22 +41,22 @@
       </div>
       <!-- Modal Body -->
       <div class="modal-body">
-        <form>
+        <form #form="ngForm" (ngSubmit)="addAccount(form)">
           <div class="mb-3">
             <label for="Username" class="form-label">Tên Tài Khoản</label>
-            <input type="text" class="form-control" id="Username" name="Username" required>
+            <input type="text" class="form-control" id="Username" name="Username" [(ngModel)]="newAccount.Username" required>
           </div>
           <div class="mb-3">
             <label for="Password" class="form-label">Mật khẩu</label>
-            <input type="password" class="form-control" id="Password" name="Password" required>
+            <input type="password" class="form-control" id="Password" name="Password" [(ngModel)]="newAccount.Password" required>
           </div>
           <div class="mb-3">
             <label for="Role" class="form-label">Vai trò</label>
-            <input type="text" class="form-control" id="Role" name="Role" required>
+            <input type="text" class="form-control" id="Role" name="Role" [(ngModel)]="newAccount.Role" required>
           </div>
           <div class="mb-3">
             <label for="PhoneNumber" class="form-label">Số điện thoại</label>
-            <input type="text" class="form-control" id="PhoneNumber" name="PhoneNumber" required>
+            <input type="text" class="form-control" id="PhoneNumber" name="PhoneNumber" [(ngModel)]="newAccount.PhoneNumber" rows="3" required>
           </div>
           <button type="submit" class="btn btn-primary">Lưu</button>
         </form>
@@ -78,22 +78,22 @@
       </div>
       <!-- Modal Body -->
       <div class="modal-body">
-        <form>
+        <form #editForm="ngForm" (ngSubmit)="editAccount(editForm)">
           <div class="mb-3">
             <label for="Username" class="form-label">Tên Tài Khoản</label>
-            <input type="text" class="form-control" id="Username" name="Username" required>
+            <input type="text" class="form-control" id="Username" name="Username" [(ngModel)]="selectedAccount.Username" required>
           </div>
           <div class="mb-3">
             <label for="Password" class="form-label">Mật khẩu</label>
-            <input type="password" class="form-control" id="Password" name="Password" required>
+            <input type="password" class="form-control" id="Password" name="Password" [(ngModel)]="selectedAccount.Password" required>
           </div>
           <div class="mb-3">
             <label for="Role" class="form-label">Vai trò</label>
-            <input type="text" class="form-control" id="Role" name="Role" required>
+            <input type="text" class="form-control" id="Role" name="Role" [(ngModel)]="selectedAccount.Role" required>
           </div>
           <div class="mb-3">
             <label for="PhoneNumber" class="form-label">Số điện thoại</label>
-            <input type="text" class="form-control" id="PhoneNumber" name="PhoneNumber" required>
+          <input type="text" class="form-control" id="PhoneNumber" name="PhoneNumber" [(ngModel)]="selectedAccount.PhoneNumber" rows="3" required>
           </div>
           <button type="submit" class="btn btn-warning mr-2">Lưu</button>
         </form>
