--- a/frontend/restaurant-management-app/src/app/component/customer/home/home.component.html
+++ b/frontend/restaurant-management-app/src/app/component/customer/home/home.component.html
@@ -119,7 +119,8 @@
 </div>
 <!-- coffee section end -->
 <!-- about section start -->
-<div class="about_section layout_padding">
+ <app-about-us></app-about-us>
+<!-- <div class="about_section layout_padding">
    <div class="container">
       <div class="row">
          <div class="col-md-12">
@@ -130,7 +131,7 @@
       <div class="about_section_2 layout_padding">
          <div class="image_iman"><img src="assets/images/about-img.png" class="about_img"></div>
          <div class="about_taital_box">
-            <h1 class="about_taital_1">Dung Mama'Kitchen</h1>
+            <h1 >Dung Mama'Kitchen</h1>
             <p class=" about_text">Chúng tôi tự hào là địa chỉ lý tưởng cho những tín đồ sushi và người yêu thích nước uống đặc biệt.
                                     Nhà hàng chúng tôi tự hào mang lại những trải nghiệm ẩm thực độc đáo, từ những món sushi truyền thống cho đến các sáng tạo mới lạ, đảm bảo sẽ làm hài lòng mọi thực khách.
                                     Ngoài ra, chúng tôi còn cung cấp một loạt các loại nước uống độc đáo và phong phú, từ trà xanh truyền thống cho đến cocktail tinh tế, để tạo điều kiện lý tưởng cho bữa ăn của bạn. 
@@ -139,7 +140,7 @@
          </div>
       </div>
    </div>
-</div>
+</div> -->
 <!-- about section end -->
 
 <!-- blog section start -->
