--- a/frontend/restaurant-management-app/src/app/component/backet/nav-bar/nav-bar.component.html
+++ b/frontend/restaurant-management-app/src/app/component/backet/nav-bar/nav-bar.component.html
@@ -24,6 +24,9 @@
             <a class="nav-link" routerLink="/categories">Danh mục</a>
           </li>
           <li class="nav-item" *ngIf="role === 'Admin'">
+            <a class="nav-link" routerLink="/table-booking-admin">Danh sách đặt</a>
+          </li>
+          <li class="nav-item" *ngIf="role === 'Admin'">
             <a class="nav-link" routerLink="/admin/dishes">Món Ăn</a>
           </li>
           <li class="nav-item" *ngIf="role === 'Admin'">
