--- a/frontend/restaurant-management-app/src/app/component/admin/admin-home/admin-dishes/admin-dishes.component.html
+++ b/frontend/restaurant-management-app/src/app/component/admin/admin-home/admin-dishes/admin-dishes.component.html
@@ -1,42 +1,42 @@
 <div style="margin-bottom: 70px;" class="container mt-5">
-    <h1 class="mb-4">Danh sách Món ăn</h1>
-    <button class="btn btn-primary mb-3" onclick="document.getElementById('id01').style.display='block'">Thêm Món ăn</button>
-    <table class="table table-bordered table-striped">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Tên Món ăn</th>
-          <th>Mô Tả</th>
-          <th>Giá</th>
-          <th>URL Hình ảnh</th>
-          <th>Danh Mục</th>
-          <th style="width: 140px;">Thao tác</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let dish of dishes">
-          <td>{{ dish.DishID }}</td>
-          <td>{{ dish.Name }}</td>
-          <td>{{ dish.Description }}</td>
-          <td>{{ dish.Price }}</td>
-          <td><img src="{{ dish.ImageURL }}"></td>
-          <td>{{ categoryNames[dish.CategoryID] }}</td>
-          <td>
-            <button class="btn btn-warning mr-2" onclick="document.getElementById('id02').style.display='block'">Sửa</button>
-            <button class="btn btn-danger">Xóa</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+  <h1 class="mb-4">Danh sách Món ăn</h1>
+  <button class="btn btn-primary mb-3" onclick="document.getElementById('id01').style.display='block'">Thêm Món ăn</button>
+  <table class="table table-bordered table-striped">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Tên Món ăn</th>
+        <th>Mô Tả</th>
+        <th>Giá</th>
+        <th>URL Hình ảnh</th>
+        <th>Danh Mục</th>
+        <th style="width: 140px;">Thao tác</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let dish of dishes">
+        <td>{{ dish.DishID }}</td>
+        <td>{{ dish.Name }}</td>
+        <td>{{ dish.Description }}</td>
+        <td>{{ dish.Price }}</td>
+        <td><img class="img" src="{{ dish.ImageURL }}" alt="Dish Image" style="width: 100px; height: 100px;"></td>
+        <td>{{ categoryNames[dish.CategoryID] }}</td>
+        <td>
+          <button class="btn btn-warning mr-2" (click)="setSelectedDish(dish)">Sửa</button>
+          <button class="btn btn-danger">Xóa</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
-  <!-- Add Modal -->
+<!-- Add Modal -->
 <div id="id01" class="modal">
   <div class="modal-dialog">
     <div class="modal-content">
       <!-- Modal Header -->
       <div class="modal-header">
-        <h5 class="modal-title">Thêm Danh Mục Mới</h5>
+        <h5 class="modal-title">Thêm Món ăn Mới</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="document.getElementById('id01').style.display='none'">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -66,7 +66,7 @@
               <option *ngFor="let category of categories" [value]="category.CategoryID">{{ category.Name }}</option>
             </select>
           </div>
-          <button style="margin-top: 20px;" type="submit" class="btn btn-primary">Lưu</button>
+          <button style="margin-top: 20px;" type="submit" class="btn btn-primary">Thêm</button>
         </form>
       </div>
     </div>
@@ -79,33 +79,33 @@
     <div class="modal-content">
       <!-- Modal Header -->
       <div class="modal-header">
-        <h5 class="modal-title">Sửa Danh Mục</h5>
+        <h5 class="modal-title">Sửa Món ăn</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="document.getElementById('id02').style.display='none'">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <!-- Modal Body -->
       <div class="modal-body">
-        <form>
+        <form (ngSubmit)="updateDish()">
           <div class="mb-3">
             <label for="editName" class="form-label">Tên Món ăn</label>
-            <input type="text" class="form-control" id="editName" name="editName" required>
+            <input type="text" class="form-control" id="editName" name="editName" [(ngModel)]="selectedDish.Name" required>
           </div>
           <div class="mb-3">
             <label for="editDescription" class="form-label">Mô tả</label>
-            <textarea class="form-control" id="editDescription" name="editDescription"  rows="3" required></textarea>
+            <textarea class="form-control" id="editDescription" name="editDescription" rows="3" [(ngModel)]="selectedDish.Description" required></textarea>
           </div>
           <div class="mb-3">
             <label for="editPrice" class="form-label">Giá</label>
-            <input type="number" class="form-control" id="editPrice" name="editPrice"  required>
+            <input type="number" class="form-control" id="editPrice" name="editPrice" [(ngModel)]="selectedDish.Price" required>
           </div>
           <div class="mb-3">
             <label for="editImageURL" class="form-label">URL Hình ảnh</label>
-            <input type="text" class="form-control" id="editImageURL" name="editImageURL" required>
+            <input type="text" class="form-control" id="editImageURL" name="editImageURL" [(ngModel)]="selectedDish.ImageURL" required>
           </div>
           <div class="mb-3">
             <label for="editCategory" class="form-label">Danh Mục</label>
-            <select class="form-control" id="editCategory" name="editCategory"  required>
+            <select class="form-control" id="editCategory" name="editCategory" [(ngModel)]="selectedDish.CategoryID" required>
               <option *ngFor="let category of categories" [value]="category.CategoryID">{{ category.Name }}</option>
             </select>
           </div>
